fix(shortcuts): align trashcan icon and text with mandaty/wybory icons

--- a/assets/app/main.css
+++ b/assets/app/main.css
@@ -626,7 +626,7 @@ img{
 
 .delete_action .action_box_text{
     color: #ff6b6b;
-    margin-left: -10px;
+    margin-left: 0;
 }
 
 .delete_action .action_image{
@@ -635,6 +635,7 @@ img{
     height: 80px;
     position: relative;
     top: -5px;
+    margin-right: 15px;
 }
 
 .action_box_connected .action_box:nth-child(2) .action_image{
